<?xml version="1.0"?>
<package format="3">
  <name>gnss_imu_wheel_localizer</name>
  <version>0.1.0</version>
  <description>GNSS, IMU, and wheel odometry fusion localizer for Autoware.</description>
  <maintainer email="autoware@example.com">Autoware Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <build_depend>Eigen3</build_depend>
  <build_depend>GeographicLib</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>GeographicLib</build_export_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>GeographicLib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components>
      <node plugin="gnss_imu_wheel_localizer::GnssImuWheelLocalizerNode"/>
    </rclcpp_components>
  </export>
</package>
